Initial commit from template

--- a/hints/oduvan.html
+++ b/hints/oduvan.html
@@ -2,60 +2,65 @@
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 1}}
+    Como substituir sublinhados por espaços em uma string?
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 1}}
+    Você pode usar o método replace() para substituir todas as ocorrências de um caractere em uma string por outro. Por exemplo:
+<pre class="brush: python">
+texto = "olá_mundo"
+texto_corrigido = texto.replace("_", " ")
+print(texto_corrigido) # Output: "olá mundo"
+</pre>
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 2}}
+    3
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 2}}
+    4
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 3}}
+    5
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 3}}
+    6
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 4}}
+    7
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 4}}
+    8
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 5}}
+    9
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 5}}
+    10
    </p>
   </div>
  </div>
